# hobby-off-app

./: .gitignore  README.md  app.py  main.py  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  playwright.yml
api/: index.py  requirements.txt
app/: __init__.py  config.py
app/domain/: product.py
app/routes/: image.py
app/services/: image_generator.py  layout.py
e2e/: form-submission.spec.ts  utils.ts  validation.spec.ts
templates/: form.html
tests/: __init__.py  test_app.py  test_image.py
tests/services/: test_image_generator.py
